Update level content (WIP)

--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -164,3 +164,5 @@ asset_index:
     recall-view-file-tree: merge-branch@recall-view-file-tree.png
     intro-merge-branch-1: merge-branch@intro-merge-branch-1.png
     intro-merge-branch-2: merge-branch@intro-merge-branch-2.png 
+    illustrate-merged-graph: merge-branch@illustrate-merged-graph.png
+    illustrate-merge-branch-process: merge-branch@illustrate-merge-branch-process.png
